--- a/tutorial/requirements.txt
+++ b/tutorial/requirements.txt
@@ -1,7 +1,21 @@
+appnope==0.1.0
+autopep8==1.2.2
+backports.shutil-get-terminal-size==1.0.0
+decorator==4.0.10
 Django==1.9.2
-django-bootstrap3==6.2.2
+django-bootstrap3==7.0.1
+django-extensions==1.6.7
 flake8==2.5.4
+gnureadline==6.3.3
+ipython==4.2.0
+ipython-genutils==0.1.0
 mccabe==0.4.0
+pbr==1.10.0
 pep8==1.7.0
+pexpect==4.1.0
+pickleshare==0.7.2
+ptyprocess==0.5.1
 pyflakes==1.0.0
-wheel==0.24.0
+simplegeneric==0.8.1
+six==1.10.0
+traitlets==4.2.1
