--- a/tutorial/requirements.txt
+++ b/tutorial/requirements.txt
@@ -2,8 +2,8 @@ appnope==0.1.0
 autopep8==1.2.2
 backports.shutil-get-terminal-size==1.0.0
 decorator==4.0.10
-Django==1.9.2
-django-bootstrap3==7.0.1
+Django==1.11.5
+django-bootstrap3==9.0.0
 django-extensions==1.6.7
 flake8==2.5.4
 gnureadline==6.3.3
@@ -16,6 +16,7 @@ pexpect==4.1.0
 pickleshare==0.7.2
 ptyprocess==0.5.1
 pyflakes==1.0.0
+pytz==2017.2
 simplegeneric==0.8.1
 six==1.10.0
 traitlets==4.2.1
